just turn off maven gc limit
Signed-off-by: Felix Reyn <freyn@pivotal.io>